# metafiles

./: .editorconfig  .gitignore  LICENSE  README.md  Testfile.txt  metafiles.cabal  stack.yaml
data/: Textfile.tags.xml
src/: Main.hs
