name:                metafiles
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stuf/metafiles#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Rimaila
maintainer:          stefan@rimaila.fi
copyright:           2018 Stefan Rimaila
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable metafiles
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , xattr